menambahkan dataset,CRUD,Fixed UI, etc.

--- a/app/static/css/dashAdmin.css
+++ b/app/static/css/dashAdmin.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
 
 :root{
-    --color-primary: #6C9BCF;
-    --color-danger: #FF0060;
+    --color-primary: #DC143C;
+    --color-danger: #DC143C;
     --color-success: #1B9C85;
     --color-warning: #F7D060;
     --color-white: #fff;
     --color-info-dark: #7d8da1;
     --color-dark: #363949;
-    --color-light: rgba(132, 139, 200, 0.18);
+    --color-light: rgba(220, 20, 60, 0.18);
     --color-dark-variant: #677483;
     --color-background: #f6f6f9;
 
@@ -351,6 +351,14 @@ aside .sidebar a{
     position: relative;
     margin-left: 2rem;
     transition: all 0.3s ease;
+}
+
+aside .sidebar a:hover{
+    background: var(--color-light);
+    color: var(--color-primary) !important;
+    transform: translateX(4px);
+    border-radius: var(--border-radius-1);
+    margin-right: 1rem;
 }
 
 aside .sidebar a span{
